syntax = "proto3";

package criterions;

// Criterions Service definition
service CriterionsService {
  // ---- CRITERIONS MODULE ----

  // Creates a new criterion
  rpc CreateCriterion (CreateCriterionRequest) returns (CreateCriterionResponse) {}

  // Updates an existing criterion
  rpc UpdateCriterion (UpdateCriterionRequest) returns (UpdateCriterionResponse) {}

  // Gets a criterion by ID
  rpc GetCriterion (GetCriterionRequest) returns (GetCriterionResponse) {}

  // Lists criterions with optional filters
  rpc ListCriterions (ListCriterionsRequest) returns (ListCriterionsResponse) {}

  // Deletes a criterion
  rpc DeleteCriterion (DeleteCriterionRequest) returns (DeleteCriterionResponse) {}
}

// ---- CRITERIONS MODULE REQUEST/RESPONSE ----

// The request message for creating a new criterion.
message CreateCriterionRequest {
  int32 eventId = 1;
  string name = 2;
  string description = 3;
  double weight = 4;
  bool active = 5;
  repeated int32 courseIds = 6;
}

// The response message containing the newly created criterion.
message CreateCriterionResponse {
  int32 id = 1;
  int32 eventId = 2;
  string name = 3;
  string description = 4;
  double weight = 5;
  bool active = 6;
  repeated int32 courseIds = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

// The request message for updating a criterion.
message UpdateCriterionRequest {
  int32 id = 1;
  int32 eventId = 2;
  string name = 3;
  string description = 4;
  double weight = 5;
  bool active = 6;
  repeated int32 courseIds = 7;
}

// The response message for updating a criterion.
message UpdateCriterionResponse {
  int32 id = 1;
  int32 eventId = 2;
  string name = 3;
  string description = 4;
  double weight = 5;
  bool active = 6;
  repeated int32 courseIds = 7;
  string updatedAt = 8;
}

// The request message for getting a criterion by ID.
message GetCriterionRequest {
  int32 id = 1;
}

// The response message containing the criterion.
message GetCriterionResponse {
  int32 id = 1;
  int32 eventId = 2;
  string name = 3;
  string description = 4;
  double weight = 5;
  bool active = 6;
  repeated int32 courseIds = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

// The request message for listing criterions.
message ListCriterionsRequest {
  int32 eventId = 1;    // Optional filter by event
  int32 courseId = 2;   // Optional filter by course
  int32 pageSize = 3;
  string pageToken = 4;
}

// The response message containing the list of criterions.
message ListCriterionsResponse {
  repeated GetCriterionResponse criterions = 1;
  string nextPageToken = 2;
}

// The request message for deleting a criterion.
message DeleteCriterionRequest {
  int32 id = 1;
}

// The response message for deleting a criterion.
message DeleteCriterionResponse {
  bool ok = 1;
}
